singletons-base/tests/compile-and-dump/Singletons/T511.golden

Singletons/T511.hs:0:0: error: [GHC-39584] Q monad failure
  |
7 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...

Singletons/T511.hs:0:0: error: [GHC-39584]
    `singletons-th` does not support partial applications of (->)
	In the type: Data.Proxy.Proxy (->)

  |
7 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...
