singletons-base/tests/compile-and-dump/Singletons/T511.hs
module T511 where

import Data.Proxy
import Data.Proxy.Singletons
import Data.Singletons.TH

$(singletons [d|
  data Foo = MkFoo (Proxy (->))
  |])
